# extract

./: .pdm-python  README.md  movie_e.py  pyproject.toml
src/movie_extract/: movie_e.py
tests/: test_extract.py
